(fix) using query instead params
