# src/controllers/borrower.controler.ts
@@ -42,8 +42,14 @@ export default class BorrowController {
     #swagger.security = [{
             "bearerAuth": []
     }]
-    } */
-        const { borrower_id } = req.params;
+    #swagger.parameters['borrower_id'] = {
+            in: 'query',
+            required: true,
+            type: 'string'
+    }
+    }
+    */
+        const borrower_id  = req.query.borrower_id as string;
         const borrower = await getBorrowerById(borrower_id);
         if (!borrower) {
             return iResponse(res, 404, "Borrower not found");
