# src/routes/borrow.route.ts
@@ -5,7 +5,7 @@ import { newBorrowerValidate, newRecordValidate, updateBorrowerValidate } from "
 
 const router = Router();
 router.get("/get-all", [jwtGuard], BorrowController.getAllBorrowers);
-router.get("/get/:borrower_id", [jwtGuard], BorrowController.getBorrower);
+router.get("/get", [jwtGuard], BorrowController.getBorrower);
 router.post("/add", [jwtGuard,newBorrowerValidate], BorrowController.addBorrower);
 router.patch("/update/:borrower_id", [jwtGuard, updateBorrowerValidate], BorrowController.updateBorrower);
 router.delete("/delete/:borrower_id", [jwtGuard], BorrowController.deleteBorrower);
